# datafunke

./: .pre-commit-config.yaml  .pylintrc  LICENSE  README.md  _version.py  pyproject.toml  requirements.txt  setup.py
.github/workflows/: format-and-lint.yml
datafunks/: __init__.py  anno_check.py  boxplotter.py  dynamic_query.py  exprTotal.py  get_annos.py  get_area.py  get_cell_counts.py  get_cell_den.py  get_cells.py  get_clin.py  hist_plotter.py  roc_plotter.py  tdist_ogram.py
datafunks.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
datafunks/Misc/: neighbour_table_reader.ipynb  roc_auc_plotter.ipynb  test3.ipynb
examples/histograms/: tdistogram_ex.ipynb
src/datafunks/: __init__.py  cox_plot.py  dynamic_query.py  expr_total.py  get_annos.py  get_area.py  get_cell_coords.py  get_cell_counts.py  get_cell_den.py  hist_plotter.py  histogrammer.py  plot_cells.py  roc_plotter.py  scatterplotter.py  tdist_ogram.py
src/datafunks/archived/: boxplotter.py  histogrammer.py
tests/: tests.py
